2004-07-13 Magnus Hagdorn
 * glimmer_degd.f90: load sp from glimmer_global
 * renamed module glimmer_ to glint_ (glimmer_global_grid.f90, glimmer_interp.f90, 
	glimmer_mbal.f90, glimmer_proj.f90)
 * removed old glimmer modules (glimmer_modu.f90, glimmer_object.f90, glimmer_outp.f90, 
	glimmer_setup.f90, glint_object.f90)
 * glint_type.f90: derived type definition of GLINT instance
 * glint_climate.f90: climate driver for GLINT 
 * initialise/finalise GLINT: glint_initialise.f90
 * glint_io.f90.in: added read/write_all functions
 * moved where netCDF file I/O happens (ncdf_file.f90.in, ncdf_infile.f90.in)
	
2004-07-09 Magnus Hagdorn
 * glimmer_proj.f90: added configuration read/print routines
 * glimmer_degd.f90: moved derived type definition into module
 * moved read/write new time slice logic to new procedure glimmer_nc_check[read|write]
   (ncdf.f90.in, ncdf_file.f90.in, ncdf_infile.f90.in)
 * glint_object.f90: first bits of setting up glint
 * custom netCDF I/O for GLINT related variables (glint_io.f90.in, ncdf_vars.def)
 * generate_ncvars.py: generate I/O functions for custom I/O
	
2004-07-08 Magnus Hagdorn
 * changed where configuration file is read in so it's only read once
   (eis_ela.f90, eis_forcing.f90, eis_glide.f90, eis_slc.f90, eis_temp.f90, glide.f90, 
    glide_setup.f90, ncdf_params.f90.in, simple_forcing.f90, simple_glide.f90)

2004-07-01 Magnus Hagdorn
 * handle input relaxed topo (glide.f90, glide_setup.f90, glide_types.f90)
 * ncdf_vars.def: fixed sign of isostatic sea level 
	
2004-06-30 Magnus Hagdorn
 * glimmer_ts.f90: added scalar variations of interpolation routines and
   corresponding module interface
 * eis_ela.f90: fixed a bug, use new scalar glimmer_ts, change topo and thck to 
   double precision
 * added sea-level forcing (eis_slc.f90, eis_forcing.f90)
 * ncdf_vars.def: new output variables for global sea level and isostatic sea level
 * eis_glide.f90: single function call to update climate
 * simple3.config: change time step size