@@ -1,3 +1,6 @@
+2004-07-14 Magnus Hagdorn
+ * glint_timestep.f90: timestep of glint instance
+
 2004-07-13 Magnus Hagdorn
  * glimmer_degd.f90: load sp from glimmer_global
  * renamed module glimmer_ to glint_ (glimmer_global_grid.f90, glimmer_interp.f90, 
